# 2dgame

./: .gitignore  .mailmap  2DGame.sln  README.md  cmake_build.sh
2DGame/: 2DGame.vcxproj  2DGame.vcxproj.filters  Atlas.cpp  Atlas.h  Ball.cpp  Ball.h  Block.cpp  Block.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Engine.cpp  Engine.h  Framework.cpp  Framework.h  GuillotineBinPack.h  Loader.cpp  Loader.h  ManagerCollision.cpp  ManagerCollision.h  ManagerObject.cpp  ManagerObject.h  ManagerPlayer.cpp  ManagerPlayer.h  ManagerRenderer.cpp  ManagerRenderer.h  ManagerWorld.cpp  ManagerWorld.h  Math.h  MyClass.cpp  MyClass.h  Noise.h  Object.cpp  Object.h  ObjectAsset.cpp  ObjectAsset.h  ObjectManager.cpp  ObjectManager.h  Paddle.cpp  Paddle.h  (+3 more)
2DGame/Collision/: ManagerCollision.cpp  ManagerCollision.h
2DGame/Framework/: Framework.cpp  Framework.h
2DGame/Object/: ManagerObject.cpp  ManagerObject.h  ManagerPlayer.cpp  ManagerPlayer.h  Object.cpp  Object.h  ObjectAsset.cpp  ObjectAsset.h  ObjectBase.cpp  ObjectBase.h  ObjectSource.cpp  ObjectSource.h
2DGame/Projectile/: ManagerProjectiles.cpp  ManagerProjectiles.h  PorjectileBase.cpp  ProjectileBase.h  ProjectileSource.cpp  ProjectileSource.h
2DGame/Rendering/: ManagerRenderer.cpp  ManagerRenderer.h
2DGame/Util/: GuillotineBinPack.cpp  GuillotineBinPack.h  Loader.cpp  Loader.h  Math.h  Source.cpp  Source.h  Utils.h
2DGame/World/: Block.cpp  Block.h  BlockSource.cpp  BlockSource.h  Border.cpp  Border.h  Chunk.cpp  Chunk.h  ManagerBorder.cpp  ManagerBorder.h  ManagerWorld.cpp  ManagerWorld.h  Noise.h  WorldConstants.h  db_perlin.h
2DGame/x64/Debug/: 2DGame.exe.recipe  2DGame.ilk  vc143.idb
2DGame/x64/Debug/2DGame.tlog/: 2DGame.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2DGame/x64/Release/: 2DGame.exe.recipe  2DGame.iobj  2DGame.ipdb
2DGame/x64/Release/2DGame.tlog/: 2DGame.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dokumentation/: Statusbericht_220131.txt  Statusberichte.md  Statusberichte.txt  WAB.md  gource-config.toml
Dokumentation/Doxygen/: Doxyfile  header.html
Dokumentation/Doxygen/AdditionalDocs/: README.md  WAB.md
